--- a/dateapp-prototype-nodejs_server/package.json
+++ b/dateapp-prototype-nodejs_server/package.json
@@ -13,11 +13,12 @@
     "node": "~6.10.x"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
     "parse-error": "^0.2.0"
