--- a/dating-app-web-panel/package.json
+++ b/dating-app-web-panel/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.3.0",
+    "apollo-boost": "^0.1.10",
     "axios": "^0.18.0",
     "google-map-react": "^1.0.5",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
+    "react-relay": "^1.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
