--- a/dating-app-web-panel/package.json
+++ b/dating-app-web-panel/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^1.3.0",
     "apollo-boost": "^0.1.10",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "google-map-react": "^1.0.5",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "proptypes": "^1.1.0",
     "react": "^16.4.1",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
