--- a/dating-app-web-panel/package.json
+++ b/dating-app-web-panel/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.3.0",
+    "@material-ui/icons": "^1.1.0",
     "apollo-boost": "^0.1.10",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
