--- a/dating-app-server/package.json
+++ b/dating-app-server/package.json
@@ -20,6 +20,7 @@
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.5",
+    "mongoose-schema-to-graphql": "^2.7.2",
     "morgan": "^1.9.0",
     "parse-error": "^0.2.0"
   },
