--- a/dating-app-server/package.json
+++ b/dating-app-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index.js"
   },
   "description": "dateapp-prototype-nodejs_server",
   "author": {
